--- a/src/css/SideBarRow.css
+++ b/src/css/SideBarRow.css
@@ -3,6 +3,8 @@
    display: flex;
    margin-bottom: 0.8rem;
    border-radius: 0.3rem;
+   padding-left: 0.5rem;
+   padding-bottom: 0.3rem;
 }
 
 
@@ -20,7 +22,8 @@
 }
 
 .sideBarRow li:hover{
-    background-color: rgb(235, 235, 235); 
+    background-color: white; 
+    cursor: pointer;
 }
 
 
