--- a/src/css/Post.css
+++ b/src/css/Post.css
@@ -6,6 +6,7 @@
     background-color: white;
     margin-top: 1rem;
     border-radius: 0.5rem;
+    max-width: 44rem;
 }
 .post__top{
     display: flex;
