--- a/src/css/SideBar.css
+++ b/src/css/SideBar.css
@@ -1,7 +1,12 @@
 .SideBar{
+    margin-top: 1rem;
     flex: 0.33;
+    height: 100vh;
 }
 
+.SideBar ul{
+    padding-left: 1rem;
+}
 .SideBar__avatar{
     display: flex;
     align-items: center;
@@ -18,5 +23,12 @@
 }
 
 .SideBar__avatar:hover{
-    background-color: rgb(235, 235, 235);  
+    background-color: white;  
+}
+
+@media only screen and (max-width: 1065px) {
+   
+    .SideBar{
+        display: none;
+    }
 }
